# ePolyScatOverset

./: CMakeLists.txt  Makefile  README.md
extras/: CompDiff.sh  CompareG0Debug.f90  Dump2DData.py  FLLPMMPplt.com  FLLPMMPplt.m  FLLPMMPpltPA.m  FLLPMMPpltRFPAD.m  FindRot.sh  HLLPMMPpltva.m  Make2DDist.f90  MakeDistVer.sh  PlotParam3DCnvLinFullGrid.py  PlotParam3DCnvMatLab.py  PlotParam3DCnvMatLabNE.py  PlotParam3DCnvMatLabPA.py  PlotParamData3DCnvMatLab3Gen.py  Plotparam2DAACnvMatLab3.py  Plotparam2DCnvMatLab3.py  Plotparam3DCnvMatLab3.py  Plotparam3DCnvMatLab3Gen.py  PltEnsight.com  RotationMat.f90  ShowBatch.sh  SummarizeTimeNow.py  TestNRFPAD.f90  Testmm.sh  Testmmp.f90  Testmmp.sh  construire_3D.m  ePolyScat.bat  get_rayc.pl  mesa_to_molden.pl  molden_replace_mos.pl  plot_dump.pl  pltstp.sh  setup.mod  testmpi.f90
include/: apple_10.13_rrlgfortran.mk  apple_10.14_rrlgfortran.mk  apple_10.14_rrlgfortran.mpiwrapper.gen  apple_10.15_rrlgfortran.mk  apple_11.6_rrlgfortran.mk  apple_11.6_rrlgfortran.mpiwrapper.gen  applegfortran.mk  applegfortran_lg.mk  applegfortran_lg.mpiwrapper.gen  applegfortran_mac.mk  applegfortran_mac.mpiwrapper.gen  applegfortran_ycnliu.mk  applegfortran_ycnliu.mpiwrapper.gen  cori.batch.com  corigfortran.mk  corigfortran.mpiwrapper.gen  coriintel.mk  coriintel.mpiwrapper.gen  coriintelmkl.mk  coriintelmkl.mpiwrapper.gen  ePS_v3885d87_paths_intel.sh  ePS_v3885d87_paths_ubuntu-gfortran.sh  expanse.batch.com  expanseintelmkl.mk  expanseintelmkl.mpiwrapper.gen  lrc.batch.com  lrc_rrl.batch.com  lrc_rrl.batch2.com  lrc_rrl.batch2ac_axl.com  lrc_rrl.batch2lr4.com  lrc_rrl.batch2np8.com  lrc_rrl.batch2np8ac_axl.com  lrc_rrl.batch4np8.com  lrc_rrl.batch_lr6.com  lrc_rrl.batch_lr6_n16.com  lrc_rrl.batch_lr6_n32.com  lrc_rrl.batch_lr6_n4.com  lrc_rrl.batch_lr6_n8.com  lrc_rrl.batch_lr6_np2.com  lrc_rrl.batch_lr6_np2_n16.com  (+16 more)
libint_interface/: ElectrostaticPointIntegrals.cc  ElectrostaticPointIntegrals.h  IntegrationTools.cc  IntegrationTools.h  Makedirlist  Makefile  README_install_libint  config.status  libint2.pc  libtool
manual/: MakeManual.com
manualdroppages/: MakeManualDropPages.com
profiling/: README.md  profile.sh
src_cpp/: ApplyG0.cu  GenGrid.cpp  GenGrid.hpp  PatchAlgo.cpp  PatchAlgo.hpp  ScatStabOverset.cpp  ScatStabOverset.hpp  StPot_overset_sub.cpp  StPot_overset_sub.hpp
tests/: README.html  esp.xyz  mpitest.f90  test01.inp  test01.molden2015  test01.molpro.inp  test01.ostnd  test02.inp  test02.ostnd  test03.inp  test03.molpro.inp  test03.ostnd  test04.g09  test04.g09.inp  test04.inp  test04.ostnd  test05.inp  test05.ostnd  test06.inp  test06.molpro.inp  test06.ostnd  test07.inp  test07.molpro.inp  test07.ostnd  test08.inp  test08.ostnd  (+154 more)
(+42 files in other folders)
